--- a/public/Frontend/src/app/pages/login/login.html
+++ b/public/Frontend/src/app/pages/login/login.html
@@ -8,9 +8,9 @@
       </formv>
         <br>
       <el-row class="forgot-password">
-      <router-link class="buttons_login" :to="{ name: 'home'}">New User</router-link>
+      <router-link class="buttons_login" :to="{ name: 'register'}">New User</router-link>
       &nbsp;|&nbsp;
-      <router-link class="buttons_login" :to="{ name: 'home'}">Forgot password</router-link>
+      <router-link class="buttons_login" :to="{ name: 'login'}">Forgot password</router-link>
      </el-row>
    </div>
 </div>
