--- a/public/Frontend/src/app/components/header/header.styl
+++ b/public/Frontend/src/app/components/header/header.styl
@@ -2,23 +2,21 @@
 
 .top-header
     background: primary-color none repeat scroll 0 0;
-    color:text-light-color;
+    color:#5a5156;
     padding: 1.07rem;
-    width: 100%;
     z-index: 1;
     justify-content space-between
 
 .user-details, .top-menu
     width 100%
 
-.top-menu
-    text-align:center;
-    background:primary-color-medium;
-
 .top-menu .lang_
     width 110px
 
 .top-menu{
+    text-align:center;
+    background:#fcc;
+    flex 1;
     .top-menu_item{
         font-size:1.14rem;
         border-left: 1px solid primary-color;
