--- a/public/Frontend/src/app/layouts/user/user.html
+++ b/public/Frontend/src/app/layouts/user/user.html
@@ -1,4 +1,4 @@
-<div class="flex user-layout-wrapper">
+<div class="user-layout-wrapper">
   <main class="main">
     <headerv></headerv>
     <div class="main-content">
