--- a/public/Frontend/src/assets/stylus/_settings.styl
+++ b/public/Frontend/src/assets/stylus/_settings.styl
@@ -9,5 +9,6 @@ image_path = '/public/Frontend/src/assets/images/'
 //------------------------------ Colors ----------------------------------
 color_anchor = #ff0000
 hover_anchor = #064d82
+primary-color = #c4e4f9
 //------------------------------ Speed animations ------------------------
 animation_speed = 0.5s
