--- a/public/Frontend/src/app/components/header/header.html
+++ b/public/Frontend/src/app/components/header/header.html
@@ -2,7 +2,7 @@
   <div class="user-details">
     <div class="clearfix">
       <span class="user-avatar">
-        <img src="../../../assets/avatar.jpg" alt="">
+        <img src="images/avatar.jpg" alt="">
       </span>
         <span class="username">Name<em> Email</em></span>
      </div>
