--- a/public/Frontend/src/app/layouts/user/user.html
+++ b/public/Frontend/src/app/layouts/user/user.html
@@ -8,9 +8,9 @@
       <div class="footer-content">
           <center>
           <div class="logo">
-            <img src="../../../assets/logo.png" width="130px">
+            <img src="images/logo.png" width="50  px">
           </div>
-          &copy; 2017 Test work about vue.
+          &copy; 2017 framework api.
           </center>
       </div>
     </footer>
