--- a/public/Frontend/src/app/pages/forgotPassword/forgotPassword.html
+++ b/public/Frontend/src/app/pages/forgotPassword/forgotPassword.html
@@ -1,16 +1,15 @@
 <div class="content login-wrapper">
     <div class="content-inner loginBox">
       <formv
-              :save="login"
+              :save="send"
               :form="form"
               btn-text="Login"
       >
       </formv>
         <br>
       <el-row class="forgot-password">
-      <router-link class="buttons_login" :to="{ name: 'register'}">New User</router-link>
       &nbsp;|&nbsp;
-      <router-link class="buttons_login" :to="{ name: 'forgotPassword'}">Forgot password</router-link>
+      <router-link class="buttons_login" :to="{ name: 'login'}">Login</router-link>
      </el-row>
    </div>
 </div>
